--- a/core/i18n/es_ES.json
+++ b/core/i18n/es_ES.json
@@ -26,9 +26,6 @@
     },
     "plugins\/jeeasy\/desktop\/modal\/pack.php": {
         "401 - Accès non autorisé": "401 - Acceso no autorizado",
-        "Choix des plugins à installer : ": "Elección de complementos para instalar:",
-        "Installation des plugins en cours : ": "Instalación de complementos en curso:",
-        "Installation de dépendances éventuelles en cours, vérifiez vos logs : ": "Instalación de cualquier dependencia en progreso, verifique sus registros:",
         "Découvrez nos Services Packs": "Descubra nuestros Service Packs",
         "Inclus avec": "Incluido con",
         "Tous": "Todos",
@@ -541,12 +538,13 @@
     },
     "plugins\/jeeasy\/desktop\/php\/jeeasy.php": {
         "401 - Accès non autorisé": "401 - Acceso no autorizado",
-        "Bienvenue sur la configuration facile avec Jeeasy": "Bienvenido a la configuración fácil con Jeeasy",
-        "Relancer le wizard": "Relanzar el mago",
+        "Bienvenue sur la page de configuration facile de": "Bienvenido a la página de configuración fácil de",
+        "Configurer mon": "Configurar mi",
         "Détecter mes équipements": "Detecta mi equipo",
         "Configurer ma maison": "Configurar mi casa",
         "Ajouter un équipement": "Agregar equipo",
-        "Configurer un équipement": "Configurar equipo"
+        "Configurer un équipement": "Configurar equipo",
+        "Relancer le Wizard": "Relanzar el mago"
     },
     "plugins\/jeeasy\/desktop\/js\/jeeasy.js": {
         "Frigo": "Nevera",
