--- a/core/i18n/ja_JP.json
+++ b/core/i18n/ja_JP.json
@@ -26,9 +26,6 @@
     },
     "plugins\/jeeasy\/desktop\/modal\/pack.php": {
         "401 - Accès non autorisé": "401-不正アクセス",
-        "Choix des plugins à installer : ": "Choix des plugins à installer :",
-        "Installation des plugins en cours : ": "Installation des plugins en cours :",
-        "Installation de dépendances éventuelles en cours, vérifiez vos logs : ": "Installation de dépendances éventuelles en cours, vérifiez vos logs :",
         "Découvrez nos Services Packs": "Découvrez nos Services Packs",
         "Inclus avec": "Inclus avec",
         "Tous": "全て",
@@ -541,12 +538,13 @@
     },
     "plugins\/jeeasy\/desktop\/php\/jeeasy.php": {
         "401 - Accès non autorisé": "401-不正アクセス",
-        "Bienvenue sur la configuration facile avec Jeeasy": "Bienvenue sur la configuration facile avec Jeeasy",
-        "Relancer le wizard": "Relancer le Wizard",
+        "Bienvenue sur la page de configuration facile de": "Bienvenue sur la page de configuration facile de",
+        "Configurer mon": "Configurer mon",
         "Détecter mes équipements": "Detecter mes equipements",
         "Configurer ma maison": "Configurer ma maison",
         "Ajouter un équipement": "Ajouter un équipement",
-        "Configurer un équipement": "Configurer un équipement"
+        "Configurer un équipement": "Configurer un équipement",
+        "Relancer le Wizard": "Relancer le Wizard"
     },
     "plugins\/jeeasy\/desktop\/js\/jeeasy.js": {
         "Frigo": "Frigo",
