update UI and US languageModales

--- a/core/i18n/en_US.json
+++ b/core/i18n/en_US.json
@@ -22,13 +22,19 @@
     },
     "plugins\/jeeasy\/desktop\/modal\/services.php": {
         "401 - Accès non autorisé": "401 - Unauthorized access",
-        "Les services complémentaires": "Complementary services"
+        "Les services complémentaires": "Complementary services",
+        "Les Sauvegardes Cloud" : "Cloud Saves",
+        "Nous vous proposons de sauvegarder votre Jeedom chaque nuit de façon sécurisée avec vos propres mots de passe. Soyez rassurés du moindre souci sur votre Jeedom. De plus nous économisons votre bande passante en sauvegardant uniquement les changements." : "We offer you to backup your Jeedom every night in a secure way with your own passwords. Be reassured of the slightest problem on your Jeedom. Moreover, we save your bandwidth by saving only the changes.",
+      "Envoyez depuis votre Jeedom facilement un message écrit ou vocal sans posséder de clé 3G et sans abonnement. (nécessite une connexion internet)":"Send from your Jeedom easily a written or vocal message without having a 3G key and without subscription. (requires an internet connection)",
+    "Notre serveur vérifie certains critères vitaux de votre solution domotique et vous alerte en cas de souci. Même si celle-ci ne répond plus !":"Our server checks some vital criteria of your home automation solution and alerts you in case of a problem. Even if it doesn't respond anymore!"
+
     },
     "plugins\/jeeasy\/desktop\/modal\/pack.php": {
         "401 - Accès non autorisé": "401 - Unauthorized access",
         "Choix des plugins à installer : ": "Choice of plugins to install:",
+        "Vous êtes en": "You are in",
         "Installation des plugins en cours : ": "Installation of plugins in progress:",
-        "Vous n avez selectionne aucun plugin à installer, cliquez sur suivant : ": "You have not selected any plugin to install, click on next:",
+        "Aucun plugin à installer, cliquez sur suivant : ": "You have not selected any plugin to install, click on next:",
         " Vos plugins sont prêts ": "Your plugins are ready",
         "Découvrez nos Services Packs": "Discover our Service Packs",
         "Inclus avec": "Included with",
@@ -198,13 +204,25 @@
         "Configuration sauvegardée": "Saved configuration"
     },
     "plugins\/jeeasy\/desktop\/modal\/pluginsConfigs.php": {
-        "401 - Accès non autorisé": "401 - Unauthorized Access"
+        "401 - Accès non autorisé": "401 - Unauthorized Access",
+        "Aucun Plugin installé à paramétrer": "No Plugin installed to set up",
+        "Configuration Auto des Plugins :" : "Auto Configuration of Plugins :",
+        "Choississez le mode de configuration du plugin :":"Choose the configuration mode of the plugin:",
+        "Votre box est une": "Your controller is a" ,
+        "Cliquez sur la fleche pour Ignorer" : "Click on the arrow to Ignore",
+        "OU" : "OR"
     },
     "plugins\/jeeasy\/desktop\/modal\/welcome.php": {
         "401 - Accès non autorisé": "401 - Unauthorized access",
-        "Guide de démarrage <?php echo config::byKey('product_name'); ?>": "Getting started guide <?php echo config::byKey('product_name'); ?>",
-        "Ce guide va vous aider à configurer votre <?php echo config::byKey('product_name'); ?> en quelques étapes.": "This guide will help you configure your <?php echo config::byKey('product_name'); ?> in a few steps",
+        "Guide de démarrage": "Getting started guide",
+        "Ce guide va vous aider à configurer votre": "This guide will help you configure your",
+        "en quelques étapes.": "in a few steps",
         "Cliquez sur la flêche pour commencer la configuration.": "Click on the arrow to start the configuration"
+    },
+    "plugins\/jeeasy\/desktop\/modal\/language.php": {
+        "Langage Systeme": "System Language",
+        "Cliquez sur la fleche pour Ignorer" : "Click on the arrow to Ignore",
+        "OU" : "OR"
     },
     "plugins\/jeeasy\/desktop\/modal\/jeedom.configure.php": {
         "401 - Accès non autorisé": "401 - Unauthorized access",
@@ -345,7 +363,11 @@
     },
     "plugins\/jeeasy\/desktop\/modal\/assistants.php": {
         "401 - Accès non autorisé": "401 - Unauthorized access",
-        "Les assistants vocaux": "Voice assistants"
+        "Les assistants vocaux": "Voice assistants",
+        "Assistants vocaux": "Voice assistants",
+        "Nous vous proposons une connexion facile pour profiter des assistants vocaux : Amazon Alexa et Google Assistant" : "We offer you an easy connection to enjoy the voice assistants : Amazon Alexa and Google Assistant"
+
+
     },
     "plugins\/jeeasy\/desktop\/modal\/network.discover.php": {
         "401 - Accès non autorisé": "401 - Unauthorized access",
