--- a/core/i18n/tr.json
+++ b/core/i18n/tr.json
@@ -309,7 +309,8 @@
         "Japonais (pas de support)": "Japonais (pas de support)",
         "Indonesien (pas de support)": "Indonesien (pas de support)",
         "Turc (pas de support)": "Turc (pas de support)",
-        "Nouvelle langue système choisie : ": "Nouvelle langue système choisie :"
+        "Nouvelle langue système choisie : ": "Nouvelle langue système choisie :",
+        
     },
     "plugins\/jeeasy\/desktop\/modal\/light.eqLogic.configure.php": {
         "Désolé je n\\'arrive pas à trouver votre équipement  : ": "Désolé je n\\'arrive pas à trouver votre équipement  :",
