--- a/core/i18n/de_DE.json
+++ b/core/i18n/de_DE.json
@@ -34,6 +34,7 @@
         "Installation des plugins en cours : ": "Installation der Plugins im Gange:",
         "Aucun plugin à installer, cliquez sur suivant : ": "Kein Plugin zum Installieren, klicken Sie auf Weiter:",
         " Vos plugins sont prêts ": "Deine Plugins sind fertig",
+        "Valider": "Bestätigen",
         "Vous êtes en": "Sie befinden sich in",
         "Découvrez nos Services Packs": "Entdecken Sie unsere Service Packs",
         "Inclus avec": "Im Lieferumfang enthalten",
@@ -212,13 +213,14 @@
         "Configuration Auto des Plugins :": "Automatische Konfiguration von Plugins:",
         "Votre box est une": "Ihre Kiste ist a",
         "Choississez le mode de configuration du plugin :": "Wählen Sie den Konfigurationsmodus des Plugins:",
-        "OU": "WO",
+        "OU": "ODER",
+        "Valider": "Bestätigen",
         "Cliquez sur la fleche pour Ignorer": "Klicken Sie auf den Pfeil zum Überspringen"
     },
     "plugins\/jeeasy\/desktop\/modal\/welcome.php": {
         "401 - Accès non autorisé": "401 - Nicht autorisierter Zugriff",
-        "Guide de démarrage": "Handbuch „Erste Schritte“",
-        "Ce guide va vous aider à configurer votre": "Diese Anleitung hilft Ihnen bei der Einrichtung",
+        "Guide de démarrage": "Leitfaden für den Start",
+        "Ce guide va vous aider à configurer votre": "Dieser Leitfaden hilft Ihnen bei der Einrichtung Ihres",
         "en quelques étapes.": "in wenigen Schritten",
         "Cliquez sur la flêche pour commencer la configuration.": "Klicken Sie auf den Pfeil, um die Konfiguration zu starten"
     },
@@ -316,17 +318,8 @@
     "plugins\/jeeasy\/desktop\/modal\/language.php": {
         "401 - Accès non autorisé": "401 - Unbefugter Zugriff",
         "Langage Systeme": "Systemsprache",
-        "Français": "Französisch",
-        "Anglais": "Englisch",
-        "Allemand": "Deutsch",
-        "Espagnol": "Spanisch",
-        "Italien (pas de support)": "Italienisch (keine Unterstützung)",
-        "Portugais (pas de support)": "Portugiesisch (kein Support)",
-        "Russe (pas de support)": "Russisch (kein Support)",
-        "Japonais (pas de support)": "Japanisch (keine Unterstützung)",
-        "Indonesien (pas de support)": "Indonesisch (keine Unterstützung)",
-        "Turc (pas de support)": "Türkisch (keine Unterstützung)",
-        "OU": "WO",
+        "OU": "ODER",
+        "Choisir la langue": "Sprache wählen",
         "Cliquez sur la fleche pour Ignorer": "Klicken Sie auf den Pfeil zum Überspringen",
         "Nouvelle langue systeme choisie : ": "Neue Systemsprache gewählt:"
     },
